# jvlauncher

./: .gitignore  ALL_FIXES_SUMMARY.md  ARCHITECTURE.md  AUTO_RESIZE_IMPLEMENTATION.md  AUTO_UPDATE_SETUP.md  CHANGELOG.md  CMD_Q_BEHAVIOR.md  CONTRIBUTING.md  CORNER_LAYERING_FIX_SUMMARY.md  Cargo.toml  DEBUGGING_GUIDE.md  FINAL_FIXES.md  FINAL_FIX_SUMMARY.md  FIXES_APPLIED.md  FIX_APPLIED.md  FORM_LAYOUT_CHANGES.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  LIQUID_GLASS_IMPLEMENTATION_SUMMARY.md  MACOS_DESIGN_STANDARDS.md  MACOS_LIQUID_GLASS_THEME.md  MACOS_UI_IMPROVEMENTS.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_SUCCESS.md  SETTINGS_SHORTCUT_IMPLEMENTATION.md  SETUP.md  SHORTCUT_RECORDING_FIX.md  SYSTEM_TRAY_IMPLEMENTATION.md  SYSTEM_TRAY_SUMMARY.md  TAURI_API_FIX.md  TAURI_CLI_OPTIMIZATION.md  TERMINAL_FIXES.md  TESTING_LIQUID_GLASS_THEME.md  TEST_UPDATER.md  UPDATER_FIX.md  UPDATER_FIXED.md  (+14 more)
.github/: SETUP_CHECKLIST.md  UPDATE_FEATURE.md  WORKFLOW_SUMMARY.md
.github/workflows/: README.md  release.yml
scripts/: create-latest-json.sh  generate-update-json.sh  sign-and-update-release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  create_icons.py
src-tauri/src/: commands.rs  database.rs  icon_extractor.rs  icon_fetcher.rs  launcher.rs  macos_delegate.rs  main.rs  scraper.rs  shortcut_manager.rs  terminal.rs  updater.rs  webapp_auto_close.rs
src-tauri/src/ai/: agent.rs  llm_client.rs  mod.rs  queue.rs  tools.rs
src/components/: add_button.rs  add_modal.rs  app_grid.rs  edit_modal.rs  icon_item.rs  mod.rs  settings_panel.rs
